HELIO-2733 - add new feature comparison table and styles to support updates to partner with us page

--- a/fulcrum/partner-with-us.html
+++ b/fulcrum/partner-with-us.html
@@ -1,30 +1,331 @@
 ---
-layout: page
+layout: page-custom-h1
 title: Partner With Us
 permalink: /partner-with-us/
 ---
 
-<h2>Partnership Models</h2>
-<p>We offer three partnership models to meet the individual needs of our clients. For more information, please email <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
-
-<div class="model">
-  <h3>Single Title Hosting</h3>
-  <p>This partnership model is offered to publishers looking for an Open Access publication solution for individual media-rich books. Rather than hosting the supplemental materials associated with a book on a web platform like WordPress not built for books, this model gives partners access to the features of the Fulcrum platform, including long-term preservation and integration into the information supply chain, without a long-term financial commitment.</p>
-  <p>Current single title partners on Fulcrum include <a href="https://fulcrum.org/northwestern">Northwestern University Press</a> and <a href="https://fulcrum.org/nyupress">NYU Press</a>.</p>
+<div class="row tagline">
+  <div class="col s12 center">
+      <h1 class="partner-title">Start publishing with Fulcrum today</h1>
+      <p class="">We offer three flexible partnership models to meet your specific needs.</p>
+    <a href="mailto:fulcrum-info@umich.edu" class="btn-large button--lg waves-effect waves-light lighten-1" title="Email us at fulcrum-info@umich.edu to get started">Get Started with Fulcrum</a>
+  </div>
 </div>
 
-<div class="model">
-  <h3>Hosted Publisher</h3>
-  <p>This partnership model is offered to publishers looking to host all of their Open Access books on Fulcrum. Structured with an annual fee, the Hosted Publisher model allows partners to have as many titles on Fulcrum as they wish. Hosted Publishers also have access to an a la carte suite of <a href="#services">publishing services</a> that can bring projects from the manuscript stage all the way to final online and print publication.</p>
-  <p>Current hosted publishers on Fulcrum include <a href="https://fulcrum.org/leverpress">Lever Press</a>.</p>
-</div>
+<div class="partnership">
+  <table id="PartnershipModels" class="partnership-table">
+    <caption class="visuallyhidden">Feature information for all Fulcrum partnership models</caption>
+    <thead>
+      <tr>
+        <th scope="col">
+          <span class="visuallyhidden">Partnership Models</span>
+        </th>
+  
+        <th scope="col">
+          <p class="heading--1">Single Title</p>
+          <p>For individual media-rich open access books</p>
+        </th>
+        <th scope="col">
+          <p class="heading--1">Hosted Publisher</p>
+          <p>Host all your books on Fulcrum</p>
+        </th>
+        <th scope="col">
+          <p class="heading--1">Hosted Collection</p>
+          <p>Host a larger collection of titles for sale to libraries or other customers</p>
+        </th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Pricing
+          </div>
+        </th>
+  
+        <td>
+          <div class="price">
+            <p>$2,500/per title</p>
+          </div>
+        </td>
+        <td>
+          <div class="price">
+            <p><a href="mailto:fulcrum-info@umich.edu" class="button">Contact us</a></p>
+          </div>
+        </td>
+        <td>
+          <div class="price">
+            <p><a href="mailto:fulcrum-info@umich.edu" class="button">Contact us</a></p>
+          </div>
+        </td>
+      </tr>
 
-<div class="model">
-  <h3>Hosted Collection</h3>
-  <p>This partnership model is offered to publishers looking to host a larger collection of titles for sale to libraries or other customers. We create a branded digital presence powered by Fulcrum. Titles and any associated supplemental materials are packaged together as a collection, including rich metadata, a catalog page, search functionality, and the Fulcrum Reader. This partnership model also offers access to a suite of <a href="#services">value-added publishing services</a>.</p>
-
-  <p>Current hosted collections on Fulcrum include <a href="https://fulcrum.org/heb">ACLS Humanities E-Book</a> and the <a href="https://fulcrum.org/michigan">University of Michigan Press</a>.</p>
-</div>
+      <tr>
+          <th scope="row">
+            <div class="feature-name">
+              Examples
+            </div>
+          </th>
+    
+          <td>
+            <div class="example">
+              <p><a href="https://fulcrum.org/northwestern">Northwestern University Press</a>, <a href="https://fulcrum.org/nyupress">NYU Press</a></p>
+            </div>
+          </td>
+          <td>
+            <div class="example">
+              <p><a href="https://fulcrum.org/leverpress">Lever Press</a></p>
+            </div>
+          </td>
+          <td>
+            <div class="example">
+              <p><a href="https://fulcrum.org/heb">ACLS Humanities E-Book</a>, <a href="https://fulcrum.org/michigan">University of Michigan Press</a></p>
+            </div>
+          </td>
+        </tr>
+  
+      <tr>
+        <th scope="col" colspan="4">
+          <span class="heading--2">
+        Features
+      </span>
+        </th>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Hosting
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            <dl class="feature-label"><dt class="feature-label__text">Long-term preservation</dt>
+              <dd class="feature-label__description">Storage in University of Michigan Library's Fedora Repository, APTrust, and CLOCKSS.</dd>
+            </dl>
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Custom branding
+          </div>
+        </th>
+  
+        <td>
+        <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td >
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+         <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Access restrictions
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Collection sales
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="col" colspan="4">
+          <span class="heading--2 pricing-table__section-heading">
+        Publishing Services
+      </span>
+        </th>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+          EPUB creation
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            <dl class="feature-label"><dt class="feature-label__text">Editorial, Design, and Production services</dt>
+              <dd class="feature-label__description">We can help with copyediting, proofreading, interior design, typesetting, cover design, digitization, and other essential book production services.</dd>
+            </dl>
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            Print and Ebook distribution
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+         <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+      
+      <tr>
+        <th scope="row">
+          <div class="feature-name">
+            <dl class="feature-label"><dt class="feature-label__text">Accessibility upgrades</dt>
+              <dd class="feature-label__description">Evaluation or creation of descriptions for illustrative materials, caption and transcript creation for A/V materials.</dd>
+            </dl>          
+          </div>
+        </th>
+  
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">No</span><i class="material-icons" aria-hidden="true" focusable="false">-</i>
+          </span>
+        </td>
+        <td>
+          <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+        <td>
+         <span class="pricing-table__feature-value">
+          <span class="visuallyhidden">Yes</span><i class="material-icons" aria-hidden="true" focusable="false">check</i>
+          </span>
+        </td>
+      </tr>
+  
+    </tbody>
+  </table>
+  </div>
 
 <h2 id="services">Fulcrum Services</h2>
 <p>We recognize that some of our partners have fully-staffed production departments, and some don’t. For both hosted collection and hosted publisher partners, Fulcrum offers a suite of à la carte publishing services, taking advantage of the expertise of <a href="https://www.publishing.umich.edu">Michigan Publishing</a>.</p>
