HELIO-2829 - add section with photos of the team to the about page.

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -47,3 +47,23 @@ permalink: /about/
 <div class="row center">
   <a href="/partner-with-us" class="btn-large button--lg waves-effect waves-light lighten-1">Partner with Us</a>
 </div>
+
+<div class="team">
+  <h2>Fulcrum Team</h2>
+  <p></p>
+  <div class="row">
+    <ul>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Melissa Baker-Young <span class="title">Fulcrum Project Manager</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Tim Belch <span class="title">Web Developer</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/colman-300px.jpg" alt="Portrait photograph of Jason Colman" /></span> Jason Colman <span class="title">Director, Publishing Services</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/dipasquale-300px.jpg" alt="Portrait photograph of Emma DiPasquale" /></span> <a href="mailto:ejdip@umich.edu">Emma DiPasquale</a> <span class="title">Fulcrum Community Manager</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Roger Espinosa <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Seth Johnson <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Greg Kostin <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/mcglone-300px.jpg" alt="Portrait photograph of Jon McGlone" /></span> Jon McGlone <span class="title">Front End Developer and UI Designer</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/morse-200px.jpg" alt="Portrait photograph of Jeremy Morse" /></span> Jeremy Morse <span class="title">Director, Publishing Technology, Co-Principal Investigator</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Conor O'Malley <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/watkinson-300px.jpg" alt="Portrait photograph of Charles Watkinson" /></span> Charles Watkinson <span class="title">Associate University Librarian for Publishing, Director, University of Michigan Press, Co-Principal Investigator</span></li>
+    </ul>
+  </div>
+</div>
