update with additional team photo

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -53,7 +53,7 @@ permalink: /about/
   <p></p>
   <div class="row">
     <ul>
-      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Melissa Baker-Young <span class="title">Fulcrum Project Manager</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/bakeryoung-300px.jpg" alt="Portrait photograph of avatar for Melissa Baker-Young" /></span> Melissa Baker-Young <span class="title">Fulcrum Project Manager</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Tim Belch <span class="title">Web Developer</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/colman-300px.jpg" alt="Portrait photograph of Jason Colman" /></span> Jason Colman <span class="title">Director, Publishing Services</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/dipasquale-300px.jpg" alt="Portrait photograph of Emma DiPasquale" /></span> <a href="mailto:ejdip@umich.edu">Emma DiPasquale</a> <span class="title">Fulcrum Community Manager</span></li>
