add team members

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -58,6 +58,7 @@ permalink: /about/
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/colman-300px.jpg" alt="Portrait photograph of Jason Colman" /></span> Jason Colman <span class="title">Director, Publishing Services</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/dipasquale-300px.jpg" alt="Portrait photograph of Emma DiPasquale" /></span> <a href="mailto:ejdip@umich.edu">Emma DiPasquale</a> <span class="title">Fulcrum Community Manager</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Roger Espinosa <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Moses Hall <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Seth Johnson <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Greg Kostin <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/mcglone-300px.jpg" alt="Portrait photograph of Jon McGlone" /></span> Jon McGlone <span class="title">Front End Developer and UI Designer</span></li>
