update with new team photos

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -54,10 +54,10 @@ permalink: /about/
   <div class="row">
     <ul>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/bakeryoung-300px.jpg" alt="Avatar for Melissa Baker-Young with a photograph of a leafless tree set in front of a cloudless blue sky" /></span> Melissa Baker-Young <span class="title">Fulcrum Project Manager</span></li>
-      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Tim Belch <span class="title">Web Developer</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/belch-300px.jpg" alt="Portrait photograph of Jeremy Morse" /></span> Tim Belch <span class="title">Web Developer</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/colman-300px.jpg" alt="Portrait photograph of Jason Colman" /></span> Jason Colman <span class="title">Director, Publishing Services</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/dipasquale-300px.jpg" alt="Portrait photograph of Emma DiPasquale" /></span> <a href="mailto:ejdip@umich.edu">Emma DiPasquale</a> <span class="title">Fulcrum Community Manager</span></li>
-      <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Roger Espinosa <span class="title">Applications Programmer, Library IT</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/espinosa-300px.jpg" alt="Portrait photograph of Jeremy Morse" /></span> Roger Espinosa <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/hall-300px.png" alt="Avatar for Moses Hall with a symbol inside a red diamond on a black background" /></span> Moses Hall <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Seth Johnson <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><i class="material-icons">person</i></span> Greg Kostin <span class="title">Applications Programmer, Library IT</span></li>
