--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -158,7 +158,7 @@ permalink: /accessibility/
   <li><a href="http://dx.doi.org/10.3998/mpub.10212548">Accessibility and Publishing</a>, by Stephanie S. Rosen
     <p>Written by University of Michigan Library's Accessibility Specialist, this open access ebook is a primer for publishers looking to gain an orientation to the complex landscape of accessible publishing in the scholarly ecosystem.</p>
   </li>
-  <li><a href="https://bisg.org/store/ViewProduct.aspx?id=13534677">Book Industry Study Group Gudie to Accessible Publishing and Cheat Sheets</a>
+  <li><a href="https://bisg.org/store/ViewProduct.aspx?id=13534677">Book Industry Study Group Guide to Accessible Publishing and Cheat Sheets</a>
     <p>A live, up-to-date guide for publishers looking to start making their content accessible.</p>
   </li>
 </ul>
