--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -54,7 +54,7 @@ permalink: /about/
   <div class="row">
     <ul>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/bakeryoung-300px.jpg" alt="A photograph of a leafless tree set in front of a cloudless blue sky serving as an avatar for Melissa Baker-Young with a " /></span> Melissa Baker-Young <span class="title">Fulcrum Project Manager</span></li>
-      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/belch-300px.jpg" alt="An orgami bird serving as an avatar for Timothy Belch" /></span> Tim Belch <span class="title">Web Developer</span></li>
+      <li class="col s12 m4 l3"><span class="image"><img src="/img/about/belch-300px.jpg" alt="An origami bird serving as an avatar for Timothy Belch" /></span> Tim Belch <span class="title">Web Developer</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/colman-300px.jpg" alt="Portrait photograph of Jason Colman" /></span> Jason Colman <span class="title">Director, Publishing Services</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/espinosa-300px.jpg" alt="Portrait photograph of Roger Espinosa" /></span> Roger Espinosa <span class="title">Applications Programmer, Library IT</span></li>
       <li class="col s12 m4 l3"><span class="image"><img src="/img/about/hall-300px.png" alt="A red diamond on a black background with a red symbol inside the diamond, serving as an avatar for Moses Hall" /></span> Moses Hall <span class="title">Applications Programmer, Library IT</span></li>
