HELIO-3003 - update exceptions list to match VPAT, prepare for new VPAT file

--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -4,10 +4,10 @@ title: Accessibility
 permalink: /accessibility/
 ---
 
-<p class="milli">Last updated: October 16, 2019</p>
+<p class="milli">Last updated: February 12, 2020</p>
 <p>Accessibility is a core value and design component of Fulcrum. We are dedicated to creating inclusive services and content for all readers, and are constantly working to make Fulcrum and its content as accessible and usable as possible.</p>
 <p>The Fulcrum platform aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in both the platform and its content by providing infrastructure and resources to support accessible books, image descriptions, transcripts for audio, captions for video, and alternative formats for digitized content.</p>
-<p>The extent to which Fulcrums meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is measured and reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.1-20180818.pdf">Voluntary Product Accessibility Template (VPAT) Version 2.1</a>.</p>
+<p>The extent to which Fulcrums meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is measured and reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.3INT-20200212.pdf">Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a>.</p>
 <p>Accessibility features, compatibility, and known issues are also summarized on this page.</p>
 
 <div class="help">
@@ -61,16 +61,13 @@ permalink: /accessibility/
 <h4>Known issues</h4>
 <p>For readers using NVDA:</p>
 <ul>
-  <li>When changing location in the Fulcrum Reader using the navigation slider, each location is read only as a number. This number indicates the percentage of progress through the book (out of 100%).</li>
   <li>In the Fulcrum Reader, alt-text image descriptions will be read when the embedded image is selected via the TAB key, but will not be read automatically via continuous reading. Alt-text image descriptions can be accessed by selecting the embedded image via keyboard controls or by following the link to the full image media page.</li>
   <li>In the Fulcrum Reader, when searching inside the text of a book and following a search result, the matched term in the text is indicated on the page only through visual highlighting of the matched text, but the excerpts and chapter locations are accessible through screen reader technology.</li>
-  <li>Screen reader users are not notified when moving between pages in the Fulcrum Reader.</li>
   <li>On <a href="https://www.fulcrum.org/concern/monographs/sj139271b?locale=en">book title pages</a>, “Table of Contents” is the default tab. To get to other tabs on that page, navigate to the “Table of Contents” heading and press the right arrow key.</li>
   <li>On <a href="https://www.fulcrum.org/concern/file_sets/x633f103b?locale=en">resources pages</a>, “Info” is the default tab. To get to others tabs, navigate to the “Info” heading and press the right arrow key.</li>
 </ul>
 <p>For readers using VoiceOver:</p>
 <ul>
-  <li>When changing the location in the Fulcrum Reader through the bottom navigation slider, VoiceOver does not read the correct location. To find out the accurate current location in the text, press “tab” once to have VoiceOver read the label under the scroll bar.</li>
   <li>When the focus in the Fulcrum Reader is on a piece of embedded content such as a video or image, the VoiceOver rotor only recognizes the media controls as links. To access the other links and menu buttons through the rotor, navigate away from the embedded piece of media first.</li>
 </ul>
 
