HELIO-3254 HELIO-3255 - add newsletter entries as blog posts; update homepage video

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -26,7 +26,7 @@ layout: default
       <div class="row center promo">
         <div class="col s12 l8 offset-l2">
           <div class="video widescreen">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wsscKcoJN-8?rel=0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/2ZgMFJAI_Gw?rel=0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
