HELIO-3326 - add privacy page; add page to navigation; update links in GDPR message and terms page

--- a/fulcrum/terms.html
+++ b/fulcrum/terms.html
@@ -18,7 +18,7 @@ permalink: /terms/
     </ul>
   </li>
   <li>For concerns about potential copyright infringement, please visit <a href="https://www.lib.umich.edu/library-administration/take-down-policy-addressing-copyright-concerns">the U-M Library’s information page about “take down” requests</a>.</li>
-  <li>Fulcrum collects usage data. The U-M Library has a <a href="https://www.lib.umich.edu/library-administration/user-privacy-policy-university-library">statement on privacy and confidentiality</a> on how these data are collected and used.</li>
+  <li>Fulcrum collects usage data. We have a <a href="/privacy">statement on privacy and confidentiality</a> on how these data are collected and used.</li>
   <li>If you view or download information from Fulcrum, you agree that Fulcrum services and content therein are provided "as is" without warranty of any kind, either express or implied, including without limitation, the implied warranties of merchantability or fitness for a particular purpose. Use of Fulcrum is at your own risk and you agree to hold Fulcrum and University of Michigan and their board, employees, students, agents, and contractors harmless for your use of Fulcrum and the content therein.</li>
   <li>These terms of use shall be governed by and construed under the laws of the State of Michigan without regard for principles of choice of law.</li>
   <li>We are constantly trying to improve the Fulcrum experience. As a user of the platform we hope that you will let us know if you are having problems using Fulcrum. Please contact us at <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</li>
