Crawler Trap (Optional)

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -325,4 +325,6 @@ layout: default
           <br><br>
       </div>
     </div>
+    <!-- crawler trap seed link for Disallow: /robotrons/ statement in robots.txt -->
+    <a class="robotrons" href="/robotrons/">robotrons</a>
   </div>
