--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -4,10 +4,10 @@ title: Accessibility
 permalink: /accessibility/
 ---
 
-<p class="milli">Last updated: March 2, 2020</p>
+<p class="milli">Last updated: May 19, 2020</p>
 <p>Accessibility is a core value and design component of Fulcrum. We are dedicated to creating inclusive services and content for all readers, and are constantly working to make Fulcrum and its content as accessible and usable as possible.</p>
 <p>The Fulcrum platform aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in both the platform and its content by providing infrastructure and resources to support accessible books, image descriptions, transcripts for audio, captions for video, and alternative formats for digitized content.</p>
-<p>The extent to which Fulcrums meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is measured and reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.3INT-20200302.pdf">Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a>.</p>
+<p>The extent to which Fulcrum meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is measured and reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.3INT-20200302.pdf">Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a>. The extent to which electronic documents which comprise individual collections on Fulcrum meet WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is <a href="#content">documented in collection specific VPATs</a>.</p>
 <p>Accessibility features, compatibility, and known issues are also summarized on this page.</p>
 
 <div class="help">
@@ -29,6 +29,11 @@ permalink: /accessibility/
 
 <h2 id="timeline">Accessibility Timeline and Roadmap</h2>
 <p>Our active development on accessibility issues is publicly available and can be tracked in our <a href="https://tools.lib.umich.edu/jira/browse/HELIO-1806?jql=project%20in%20(CSB%2C%20HELIO)%20AND%20status%20in%20(%22In%20Progress%22%2C%20%22To%20Do%22%2C%20%22For%20Review%22)%20AND%20labels%20%3D%20accessibility">issue tracker for Fulcrum</a>.</p>
+
+<h3>2020</h3>
+<p>From January to March 2020, in collaboration with <a href="https://usability.msu.edu/">Michigan State University Usability and Accessibility Research Consulting</a>, Fulcrum was tested by assistive technology and limited dexterity users, identifying usability and accessibility issues with the Fulcrum E-Reader which we are actively working to address.</p>
+
+<p>In March and May 2020, we worked to update our Voluntary Product Assessment Template from 2.1 to VPAT® Version 2.3 INT. In addition, we released collection-specific VPAT®s for the University of Michigan E-Book Collection, the ACLS Humanities E-Book Collection, and the BAR Digital Collection.</p>
 
 <h3>2019</h3>
 <p>In August and September 2019, the Fulcrum team collaborated with the <a href="http://www.daisy.org/">DAISY Consortium</a> to have the Fulcrum Reader evaluated for <a href="http://epubtest.org">http://epubtest.org</a>. Several accessibility and usability issues and best practices were identified and Fulcrum developers are working to address identified issues. We will continue to work with the DAISY Consortium to have future versions of the Fulcrum Reader evaluated.</p>
@@ -125,6 +130,7 @@ permalink: /accessibility/
 <p>Fulcrum provides hosting for a number of different publishers. Accessible content is the primary responsibility of each publisher and we work with them to support and improve the accessibility of their content. Below you will find a list of accessibility features and known content issues in large collections hosted on Fulcrum.</p>
 
 <h3>ACLS Humanities E-Book</h3>
+<p><a href="/docs/Fulcrum-HEB-VPAT2.3INT-20200519.pdf">ACLS HEB Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a></p>
 <p>There are two types of book content within the ACLS Humanities E-Book (HEB). The type informs the accessibility of that content:</p>
 <ul>
   <li>EPUBs created by reformatting print to digital and include page scans and uncorrected OCR text. When read in the Fulcrum Reader, the uncorrected OCR can be accessed by adjusting the Settings and Preferences to use the text renditions. These titles are available for chapter download only in PDF format. The PDF downloads do not include the uncorrected OCR.</li>
@@ -133,7 +139,8 @@ permalink: /accessibility/
 <p>ACLS HEB titles do not contain textual descriptions of images.</p>
 <p>To request remediation of any content in the ACLS HEB, it is recommended to first contact the publisher of that title. The publisher information can either be found in the Get Citation tool in the Fulcrum Reader, or found on the title landing page beneath the author name, and may include a link to the publisher's webpage. If you cannot find the publisher information, please send an email with the title of the content, your preferred format, and the URL to <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
 
-<h3>University of Michigan Ebook Collection</h3>
+<h3>University of Michigan Press Ebook Collection</h3>
+<p><a href="/docs/Fulcrum-UMPEBC-VPAT2.3INT-20200519.pdf">UMP EBC Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a></p>
 <p>All titles in the University of Michigan Press Ebook Collection (UMP EBC) are available for download in EPUB and PDF formats, with the exception of a handful of titles only available in one format. In all cases, we recommend the EPUB format as the accessible format – all EPUBs in the UMP EBC have been designed following the Fulcrum EPUB Specification, designed to ensure compatibility with assistive technology and are more likely to contain image descriptions. However, we recognize not all print disabled users prefer EPUB and will remediate PDF files with textual descriptions of images upon request.</p>
 <p>All titles published after 2019 contain at least basic textual descriptions of images, however these descriptions are only contained within EPUB files. All audio and video associated with books produced after 2018 have transcripts or captions available. Some supplemental content has been reformatted from print to digital and may not contain Optical Character Recognition text. If OCR text has been included it has not been corrected.</p>
 <p>To request remediation of any content in the UMP EBC, please send an email with the title of the content, your preferred format, and the URL to <a href="umpress.accessibility@umich.edu">umpress.accessibility@umich.edu</a>.</p>
@@ -142,6 +149,10 @@ permalink: /accessibility/
 <p>It is the goal of Lever Press that every title containing illustrations also include textual descriptions of those images, and that audio and video content associated with titles include transcripts and captions.</p>
 <p>Lever Press titles, while open access and freely available, are not available for download.</p>
 <p>To request remediation or a file download of any Lever Press title, send and email with the title of the content, your preferred format, and the URL to <a href="mpub-help@umich.edu">mpub-help@umich.edu</a>.</p>
+
+<h3>British Archaeological Reports Digital Collection</h3>
+<p><a href="/docs/Fulcrum-BAR-VPAT2.3INT-20200519.pdf">BAR Digital Collection Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a></p>
+<p>To request remediation of any content in the UMP EBC, please send an email with the title of the content, your preferred format, and the URL to <a href="fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
 
 <h2 id="resources">Resources for Creating Accessible Content</h2>
 <p>There are several resources the Fulcrum team has developed to assist publishers in the creation of accessible content. These resources, as well as others on the web are detailed below.</p>
