HELIO-3003 - fix typo in a11y copy

--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -152,7 +152,7 @@ permalink: /accessibility/
 
 <h3>British Archaeological Reports Digital Collection</h3>
 <p><a href="/docs/Fulcrum-BAR-VPAT2.3INT-20200519.pdf">BAR Digital Collection Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a></p>
-<p>To request remediation of any content in the UMP EBC, please send an email with the title of the content, your preferred format, and the URL to <a href="fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
+<p>To request remediation of any content in the BAR Digital Collection, please send an email with the title of the content, your preferred format, and the URL to <a href="fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
 
 <h2 id="resources">Resources for Creating Accessible Content</h2>
 <p>There are several resources the Fulcrum team has developed to assist publishers in the creation of accessible content. These resources, as well as others on the web are detailed below.</p>
