HELIO-3320 - update fulcrum homepage with new copy, adding partners, adding case studies, and creating a case studies page

--- a/fulcrum/partner-with-us.html
+++ b/fulcrum/partner-with-us.html
@@ -70,7 +70,7 @@ permalink: /partner-with-us/
     
           <td>
             <div class="example">
-              <p><a href="https://fulcrum.org/northwestern">Northwestern University Press</a>, <a href="https://fulcrum.org/nyupress">NYU Press</a></p>
+              <p><a href="https://fulcrum.org/northwestern">Northwestern University Press</a>, <a href="https://fulcrum.org/nyupress">NYU Press</a>, <a href="https://fulcrum.org/uncpress">University of North Carolina Press</a></p>
             </div>
           </td>
           <td>
@@ -80,7 +80,7 @@ permalink: /partner-with-us/
           </td>
           <td>
             <div class="example">
-              <p><a href="https://fulcrum.org/heb">ACLS Humanities E-Book</a>, <a href="https://fulcrum.org/michigan">University of Michigan Press</a></p>
+              <p><a href="https://fulcrum.org/heb">ACLS Humanities E-Book</a>, <a href="https://fulcrum.org/michigan">University of Michigan Press</a>, <a href="https://fulcrum.org/barpublishing">BAR Publishing</a></p>
             </div>
           </td>
         </tr>
