HELIO-3320 - fix some copy and missing links

--- a/fulcrum/case-studies.html
+++ b/fulcrum/case-studies.html
@@ -4,7 +4,7 @@ title: Case Studies
 permalink: /case-studies/
 ---
 <div class="case-study">
-        <p>Learn more about how Fulcrum can support the needs of your enhanced ebook project with the showcase of titles below.</p>
+        <p>The following case studies showcase how Fulcrum supports a range of needs for enhanced ebook projects, from interactive 3D models to video and audio resources to external resources and digitized archival content.</p>
     <div class="row">
         <div class="col s12 m4 project-cover">
           <img class="responsive-img" src="//fulcrum.org/image-service/m900nt438/full/300,/0/default.jpg" alt="Cover for A Mid-Republican House from Gabii" />
