--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -204,9 +204,9 @@ layout: default
           </div>
           <div class="col s12 m8 project-info">
             <h3>UNC Press translated an author's vision into reality</h3>
-            <p class="light">Understanding how black political organization evolved at the end of the Civil War required author Nicole Myers Turner to learn and apply GIS mapping techniques. To ensure that her interactive maps could be integrated into the resulting title, <cite><a href="">Soul Liberty</a></cite>, UNC Press turned to Fulcrum to cost-effectively deliver an enhanced ebook, stably hosted on a branded website.
+            <p class="light">Understanding how black political organization evolved at the end of the Civil War required author Nicole Myers Turner to learn and apply GIS mapping techniques. To ensure that her interactive maps could be integrated into the resulting title, <cite><a href="https://www.fulcrum.org/concern/monographs/f7623f19r?locale=en">Soul Liberty</a></cite>, UNC Press turned to Fulcrum to cost-effectively deliver an enhanced ebook, stably hosted on a branded website.
             </p>
-            <p><a href="/partner-with-us/">Learn about Fulcrum's single title product.</a></p>
+            <p><a href="/partner-with-us">Learn about Fulcrum's single title product.</a></p>
             <a href="https://www.fulcrum.org/concern/monographs/f7623f19r?locale=en" class="btn button waves-effect waves-light lighten-1">View Project</a>
           </div>
       </div>
@@ -218,7 +218,7 @@ layout: default
             <h3>Fifty Liberal Arts Colleges found a partner not just a platform</h3>
             <p class="light">The collective governance and funding model isn’t the only innovation behind <a href="https://leverpress.org">Lever Press</a>. Supporting new forms of digital scholarship was a core goal of the founding libraries. Partnering with Fulcrum for web design, production services, and platform hosting enables even the most complex Lever Press publication to be discoverable, durable, and accessible.
             </p>
-            <p><a href="/partner-with-us/">Learn about Fulcrum's hosted publisher product.</a></p>
+            <p><a href="/partner-with-us">Learn about Fulcrum's hosted publisher product.</a></p>
             <a href="https://leverpress.org" class="btn button waves-effect waves-light lighten-1">View Project</a>
           </div>
       </div>
@@ -235,7 +235,7 @@ layout: default
       </div>      
       <div class="row">
         <div class="col s10 m6 l4 offset-s1 offset-m3 offset-l4 center">
-          <a href="/case-studies/" class="btn-large button--lg waves-effect waves-light lighten-1">Read More Case Studies</a>
+          <a href="/case-studies" class="btn-large button--lg waves-effect waves-light lighten-1">Read More Case Studies</a>
         </div>
       </div>
     </div>
