HELIO-3598 - add new blog posts and update partner with us page

--- a/fulcrum/partner-with-us.html
+++ b/fulcrum/partner-with-us.html
@@ -75,7 +75,7 @@ permalink: /partner-with-us/
           </td>
           <td>
             <div class="example">
-              <p><a href="https://fulcrum.org/leverpress">Lever Press</a></p>
+              <p><a href="https://leverpress.org">Lever Press</a>, <a href="https://acpress.amherst.edu">Amherst College Press</a></p>
             </div>
           </td>
           <td>
